# r_vss

./: CMakeLists.txt  GSTREAMERConfig.cmake  README.md  r_build.txt
.github/workflows/: cmake-single-platform.yml
cmake/: r_vssConfig.cmake.in
include/r_vss/: r_motion_engine.h
source/: r_motion_engine.cpp  r_prune.cpp  r_recording_context.cpp  r_stream_keeper.cpp  r_vss_utils.cpp  r_ws.cpp
